# cpp_volatus_core

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: fmtlog.cmake  protobuf.cmake  sfml.cmake  tgui.cmake
include/: example.hpp
include/ConfigTree/: ConfigJson.hpp  Element.hpp  Lookup.hpp  Manager.hpp  Types.hpp  Value.hpp
include/VolatusConfig/: VolatusConfig.hpp
src/: CMakeLists.txt  example.cpp
src/ConfigTree/: CMakeLists.txt  ConfigJson.cpp  Element.cpp  Lookup.cpp  Manager.cpp  Value.cpp
src/simdjson/: CMakeLists.txt
